--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
-    <title>Customer Portal | Handys</title>
+    <title>Customer | Handys</title>
   </head>
   <body oncontextmenu="return false">
     <noscript>You need to enable JavaScript to run this app.</noscript>
